# subtext

./: .gitignore  LICENSE  README.md  dune-project
example/: hello.subtext  my-note.subtext  neno.subtext  subtext.subtext
example/md/: foo.md  hello.md
lib/: dune  exn.ml  exn.mli  io.ml  io.mli  note.ml  note.mli  op.ml  op.mli  subtext.ml  subtext.mli
test/: dune  print.ml  test_io.ml  test_note.ml  test_op.ml  testdata.ml
